--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "A comprehensive stdio MCP server for DataForSEO API",
   "main": "dist/index.js",
+  "private": true,
   "scripts": {
     "build": "tsc",
     "start": "node dist/index.js",
-    "dev": "ts-node src/index.ts"
+    "dev": "ts-node src/index.ts",
+    "serve:site": "node scripts/serve-website.js",
+    "pw:install": "npx playwright install chromium",
+    "audit:site": "node scripts/audit-site.js"
   },
   "keywords": [
     "mcp",
@@ -17,13 +21,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@modelcontextprotocol/sdk": "^0.2.2",
-    "axios": "^1.6.7",
-    "zod": "^3.22.4"
+    "@modelcontextprotocol/sdk": "^1.17.0",
+    "axios": "^1.11.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.11.19",
     "ts-node": "^10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "playwright": "^1.45.0"
   }
 }
