Complete rebrand to Outcome Digital Marketing and performance optimizations
- Full rebrand from Fearnbell to Outcome Digital Marketing Ltd
- New logo implementation (OutcomeLogo.astro)
- Updated brand colors and messaging across all components
- Performance optimizations:
  - Added width/height attributes to all images (CLS: 0.00)
  - Inlined critical CSS in Layout.astro
  - Optimized font loading strategies
- Netlify deployment configuration:
  - Updated netlify.toml with security headers
  - Configured cache-control headers
  - Set up build environment variables
- Updated all page metadata with new brand
- Fixed all SEO structured data
- Deployed to https://outcome-digital-marketing.netlify.app

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fearnbell-ultimate",
+  "name": "outcome-digital-marketing",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
