--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 # Netlify configuration for Outcome Digital Marketing (Astro site)
 
 [build]
+  base = "fearnbell-ultimate"
   command = "npm run build"
-  publish = "dist"
+  publish = "fearnbell-ultimate/dist"
 
 [build.environment]
   NODE_VERSION = "20"
