Reorganize repository: Move Astro site to root directory
- Moved all Astro site files from fearnbell-ultimate subdirectory to root
- Simplified Netlify configuration (no base directory needed)
- Removed submodule structure for simpler deployment
- Site is now at root level for easier Netlify GitHub integration
- All rebrand changes to Outcome Digital Marketing preserved

--- a/.gitignore
+++ b/.gitignore
@@ -1,71 +1,27 @@
-# Dependencies
-node_modules/
-package-lock.json
-
-# Build outputs
+# build output
 dist/
+# generated types
 .astro/
-*.log
 
-# Environment variables
+# dependencies
+node_modules/
+
+# logs
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+
+# environment variables
 .env
-.env.local
-.env.production.local
-.env.development.local
+.env.production
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# macOS-specific files
 .DS_Store
-Thumbs.db
 
-# Test files
-test-*.js
-*-test.js
-*.test.js
-quick-*.js
-deep-*.js
+# jetbrains setting folder
+.idea/
 
-# Research and data files
-*.json
-!package.json
-!tsconfig.json
-!astro.config.json
-
-# Scripts and batch files
-*.bat
-*.sh
-
-# Temporary and backup files
-*.tmp
-*.bak
-*.backup
-nul
-
-# MCP servers (these should be managed separately)
-dataforseo-mcp-server/
-figma-mcp/
-lighthouse-mentoring/
-
-# Marketing sites (separate repositories)
-fearnbell-marketing/
-fearnbell-marketing-website/
-website/
-
-# Examples and configs
-examples/
-claude-desktop-config.json
-vscode-mcp-settings.json
-
-# Scripts folder
-scripts/
-
-# Site snapshots
-site-snapshots/
-
-# Claude configuration (personal)
-.claude/
-CLAUDE.MD
+# Local Netlify folder
+.netlify
