--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,46 @@
-# Root netlify.toml - directs build to fearnbell-ultimate subdirectory
+# Netlify configuration for Outcome Digital Marketing (Astro site)
 
 [build]
-  base = "fearnbell-ultimate"
   command = "npm run build"
-  publish = "fearnbell-ultimate/dist"
+  publish = "dist"
 
 [build.environment]
   NODE_VERSION = "20"
+  # Astro build environment variables
+  PUBLIC_SITE_URL = "https://outcome-digital-marketing.netlify.app"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
+
+[dev]
+  command = "npm run dev"
+  port = 2005
+  targetPort = 2005
+  autoLaunch = false
+
+# Headers configuration for security and performance
+[[headers]]
+  for = "/*"
+  [headers.values]
+    # Security headers
+    X-Frame-Options = "DENY"
+    X-Content-Type-Options = "nosniff"
+    X-XSS-Protection = "1; mode=block"
+    Referrer-Policy = "strict-origin-when-cross-origin"
+
+[[headers]]
+  for = "/assets/*"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.css"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
+
+[[headers]]
+  for = "/*.js"
+  [headers.values]
+    Cache-Control = "public, max-age=31536000, immutable"
