Fix Netlify build: Add NPM version to build environment

--- a/netlify.toml
+++ b/netlify.toml
@@ -6,6 +6,7 @@
 
 [build.environment]
   NODE_VERSION = "20"
+  NPM_VERSION = "10"
   # Astro build environment variables
   PUBLIC_SITE_URL = "https://outcome-digital-marketing.netlify.app"
 
